@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.L0RE.arte" name="ARTE.TV" version="0.5.8" provider-name="L0RE">
+<addon id="plugin.video.L0RE.arte" name="ARTE.TV" version="0.5.9" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 	</requires>
@@ -24,8 +24,8 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 0.5.8  (10.08.2019)[/COLOR][/B] by realvito[CR]
-- added: Live + Event TV = ARTE Event 5
+		<news>[B][COLOR orangered]Version 0.5.9  (30.09.2019)[/COLOR][/B] by realvito[CR]
+- fixed: LibreELEC - Fehler beim öffnen der Rubrik = Programm sortiert nach Datum (Error: unsupported locale setting)
 		</news>
 	</extension>
 </addon>
