@@ -32,3 +32,6 @@
 
 [B]Version 0.5.8  (10.08.2019)[/B] by realvito[CR]
 - added: Live + Event TV = ARTE Event 5
+
+[B]Version 0.5.9  (30.09.2019)[/B] by realvito[CR]
+- fixed: LibreELEC - Fehler beim öffnen der Rubrik = Programm sortiert nach Datum (Error: unsupported locale setting)
